# depSCAN

./: .gitignore  README.md  README_scanner.md  demo.py  package-lock.json  parsed_components.json  pyproject.toml  requirements.txt  sbom.cdx.json  sbom.spdx.json  sbom_builder.py  sbom_frontend.json
.github/workflows/: sbom-scan.yml
backend/: database.py  main.py
backend/routers/: sbom.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  loginauth.css  loginauth.jsx  main.jsx  projectlist.jsx
frontend/src/api/: api.js
frontend/src/project-page/: BarChart.jsx  ChartContainer.jsx  ComplianceDashboard.css  ComplianceDashboard.jsx  DashboardData.js  DependencyGraph.css  DependencyGraph.jsx  DonutChart.jsx  ExportReport.css  ExportReport.jsx  InventoryChart.jsx  NewScanModal.css  NewScanModal.jsx  ProjectPage.css  StatsBar.jsx  VulnTable.jsx  __write_project_page_files.py  api.js  data.js  projectlist.jsx
frontend/src/vuln-dash/: ComplianceDashboard.jsx  DependencyGraph.jsx  ExportReport.jsx  SeverityHeatmap.jsx  dashboardData.js  summarycard.jsx  vuln-dash.css  vuln-dash.jsx  vuln-section.jsx
sample-project/: Dockerfile  docker-compose.yml  package.json  requirements.txt
sbomgen/: __init__.py  cli.py  detector.py  hash_utils.py  parsers.py  purl_utils.py  stack_detector.py
tests/: test_builder.py
