[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbomgen"
version = "1.0.0"
description = "SBOM CLI Scanner — Member 1: Core Detection Module"
readme = "README.md"
requires-python = ">=3.11"

# These are the runtime dependencies for the scanner tool itself
dependencies = [
    "click>=8.1.0",                # CLI framework
    "rich>=13.5.0",                # Pretty terminal output (tables, colors)
    "packageurl-python>=0.11.2",   # PURL generation (pkg:npm/express@4.18.2)
    "tomli>=2.0.1 ; python_version < '3.11'",  # TOML parser fallback for older Python
    "pyyaml>=6.0.1",               # YAML parsing for docker-compose.yml
    "requests>=2.31.0",            # HTTP for future upload functionality
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

# This creates the `sbomgen` command when installed with pip install -e .
[project.scripts]
sbomgen = "sbomgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbomgen*"]
